--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
       Please enable it to continue.</strong>
   </noscript>
   <div data-app>
-    <co-refi json=""></co-refi>
+    <champ-app json=""></champ-app>
   </div>
   <!-- built files will be auto injected -->
 </body>
